--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,16 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        <h1>
+          <a
+            href="https://www.linkedin.com/in/amsonliu/"
+            target="_blank"
+            rel="noopener"
+          >
+            {{ site.title | default: site.github.repository_name }}
+          </a>
+        </h1>
+
         
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
