Update alt text for logo image in default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
         </h1>
         
         {% if site.logo %}
-        <img src="{{ site.logo | relative_url }}" alt="Amson Liu headshot" />
+        <img src="{{ site.logo | relative_url }}" alt="Amson Liu's headshot" />
         {% endif %}
         
         <p>{{ site.description | default: site.github.project_tagline }}</p>
