Use repository name as default for site title

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
             target="_blank"
             rel="noopener"
           >
-            {{ site.title }}
+            {{ site.title | default: site.github.repository_name }}
           </a>
         </h1>
         
