--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" 
       href="{{ "/images/favicon.png"  | absolute_url }}">
+    <title>Amson Liu’s Portfolio</title>
     {% seo %}
       <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
       <!--[if lt IE 9]>
